# Fluid-flow-Visualiser

./: .envrc  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  justfile
src/: main.cpp
src/common/: Types.h
src/physics/: IVectorField.h  ParticleSys.h  PipeFlow.h
src/ui/: MainWindow.cpp  MainWindow.h
src/vis/: VtkAdapter.cpp  VtkAdapter.h
